--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "content_scripts": [
     {
       "matches": ["https://www.amazon.com/*"],
-      "js": ["content_script.js"]
+      "js": ["converter.js"]
     }
   ],
   "permissions": [
